erDiagram

    EQUIPES {
        INT id_equipe PK
        VARCHAR nome_equipe
        VARCHAR nome_tecnico
        VARCHAR clube
    }

    JOGADORES {
        VARCHAR CPF_jogador PK
        VARCHAR nome_jogador
        VARCHAR tipo
        INT id_equipe FK
    }

    UNIFORMES {
        INT id_equipe PK, FK
        INT numero_uniforme PK
        VARCHAR cor_camisa
        VARCHAR cor_meia
        VARCHAR cor_calcao
    }

    ESTADIOS {
        INT id_estadio PK
        VARCHAR nome_estadio
        VARCHAR endereco
        VARCHAR cidade
        CHAR(2) UF
        VARCHAR bairro
    }

    JUIZES {
        VARCHAR CPF_juiz PK
        VARCHAR nome_juiz
    }

    PARTIDAS {
        INT id_partida PK
        INT id_estadio FK
        VARCHAR CPF_juiz FK
    }

    PARTIDA_EQUIPES {
        INT id_partida PK, FK
        INT id_equipe PK
        INT gols
        INT cartao_vermelho
        INT cartao_amarelo
    }

    EQUIPES ||--|{ JOGADORES : possui
    EQUIPES ||--|{ UNIFORMES : possui

    ESTADIOS ||--o{ PARTIDAS : recebe
    JUIZES ||--o{ PARTIDAS : apita

    PARTIDAS ||--|{ PARTIDA_EQUIPES : possui
    EQUIPES  ||--o{ PARTIDA_EQUIPES : participa
